--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,16 @@
         "maxLambdaSize": "15mb",
         "runtime": "python3.12"
       }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
+      }
     }
   ],
+  "outputDirectory": "staticfiles",
   "routes": [
     {
       "src": "/static/(.*)",
