--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ django-cors-headers==4.5.0; python_version >= '3.9'
 djangorestframework==3.15.2; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
 sqlparse==0.5.1; python_version >= '3.8'
+whitenoise==6.7.0; python_version >= '3.8'
