--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,14 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "digital-classroom/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.12"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
-      }
-    }
+    { "src": "manage.py", "use": "@vercel/python" }
   ],
-  "outputDirectory": "staticfiles",
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "digital-classroom/wsgi.py"
-    }
-  ]
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "/manage.py" }
+  ],
+  "static": {
+    "src": "staticfiles",
+    "dest": "/static"
+  }
 }
