--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "manage.py", "use": "@vercel/python" }
+    { "src": "manage.py", "use": "@vercel/python" },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
+      }
+    }
   ],
+  "outputDirectory": "staticfiles",
   "routes": [
     { "src": "/static/(.*)", "dest": "/static/$1" },
     { "src": "/(.*)", "dest": "/manage.py" }
