--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ djangorestframework==3.15.2; python_version >= '3.8'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 packaging==24.1; python_version >= '3.8'
-psycopg2-binary==2.9.9; python_version >= '3.7'
+psycopg2==2.7.4; python_version >= '3.7'
 sqlparse==0.5.1; python_version >= '3.8'
 uvicorn==0.31.1; python_version >= '3.8'
 whitenoise[brotli]==6.7.0; python_version >= '3.8'
