--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ asgiref==3.8.1; python_version >= '3.8'
 brotli==1.1.0
 click==8.1.7; python_version >= '3.7'
 django==5.1.2; python_version >= '3.10'
-django-cockroachdb==5.1; python_version >= '3.10'
 django-cors-headers==4.5.0; python_version >= '3.9'
 djangorestframework==3.15.2; python_version >= '3.8'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 packaging==24.1; python_version >= '3.8'
-psycopg2-binary==2.9.9; python_version >= '3.7'
+psycopg==3.2.3; python_version >= '3.8'
 sqlparse==0.5.1; python_version >= '3.8'
+typing-extensions==4.12.2; python_version < '3.13'
 uvicorn==0.31.1; python_version >= '3.8'
 whitenoise[brotli]==6.7.0; python_version >= '3.8'
