--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ djangorestframework==3.15.2; python_version >= '3.8'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 packaging==24.1; python_version >= '3.8'
-psycopg==3.2.3; python_version >= '3.8'
+psycopg2-binary==2.9.9
 sqlparse==0.5.1; python_version >= '3.8'
 typing-extensions==4.12.2; python_version < '3.13'
 uvicorn==0.31.1; python_version >= '3.8'
