--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 -i https://pypi.org/simple
 asgiref==3.8.1; python_version >= '3.8'
-brotli==1.1.0
-click==8.1.7; python_version >= '3.7'
-django==5.1.2; python_version >= '3.10'
+certifi==2024.8.30; python_version >= '3.6'
+cffi==1.17.1; platform_python_implementation != 'PyPy'
+charset-normalizer==3.3.2; python_full_version >= '3.7.0'
+cryptography==43.0.1; python_version >= '3.7'
+defusedxml==0.8.0rc2; python_version >= '3.6'
+django==5.1.1; python_version >= '3.10'
 django-cockroachdb==5.1; python_version >= '3.10'
-django-cors-headers==4.5.0; python_version >= '3.9'
+django-cors-headers==4.4.0; python_version >= '3.8'
 djangorestframework==3.15.2; python_version >= '3.8'
-gunicorn==23.0.0; python_version >= '3.7'
-h11==0.14.0; python_version >= '3.7'
-packaging==24.1; python_version >= '3.8'
-psycopg2-binary==2.9.9
+idna==3.10; python_version >= '3.6'
+oauthlib==3.2.2; python_version >= '3.6'
+psycopg2-binary==2.9.9; python_version >= '3.7'
+pycparser==2.22; python_version >= '3.8'
+python-dotenv==1.0.1; python_version >= '3.8'
 sqlparse==0.5.1; python_version >= '3.8'
-typing-extensions==4.12.2; python_version < '3.13'
-uvicorn==0.31.1; python_version >= '3.8'
-whitenoise[brotli]==6.7.0; python_version >= '3.8'
+urllib3==2.2.3; python_version >= '3.8'
+whitenoise==6.7.0; python_version >= '3.8'
