--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "dgc/wsgi.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.11"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
-      }
+      "src": "manage.py",
+      "use": "@vercel/python"
     }
   ],
-  "outputDirectory": "staticfiles",
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "dgc/wsgi.py"
-    }
-  ]
+  "buildCommand": "pip install -r requirements.txt"
 }
