--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "manage.py",
-      "use": "@vercel/python"
+      "src": "dgc/wsgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+      }
     }
   ],
   "buildCommand": "pip install -r requirements.txt"
